Actions
Bug #12534
closedfm: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
pi_walker.c: In function 'pi_walkerlist_create': pi_walker.c:707: error: passing argument 5 of 'uu_list_pool_create' makes integer from pointer without a cast /code/illumos-gate/proto/root_sparc/usr/include/libuutil.h:238: note: expected 'uint32_t' but argument is of type 'void *' ldom_xmpp_client.c: In function 'xmpp_connect': ldom_xmpp_client.c:255: error: passing argument 4 of 'xmlCreatePushParserCtxt' makes integer from poin ter without a cast /usr/include/libxml2/libxml/parser.h:1015: note: expected 'int' but argument is of type 'void *' ldom_xmpp_client.c: In function 'xmpp_client_thr': ldom_xmpp_client.c:421: error: passing argument 3 of 'xmlCtxtResetPush' makes integer from pointer wit hout a cast /usr/include/libxml2/libxml/parser.h:1120: note: expected 'int' but argument is of type 'void *' *** Error code 1 dmake: Warning: Command failed for target `pics/ldom_xmpp_client.o' Current working directory /code/illumos-gate/usr/src/lib/fm/libldom/sparc cmd_memerr_arch.c: In function 'cmd_fb': cmd_memerr_arch.c:370: error: incompatible types when returning type 'void *' but 'cmd_evdisp_t' was expected cmd_memerr_arch.c:375: error: incompatible types when returning type 'void *' but 'cmd_evdisp_t' was expected cmd_memerr_arch.c:380: error: incompatible types when returning type 'void *' but 'cmd_evdisp_t' was expected *** Error code 1 dmake: Fatal error: Command failed for target `cmd_memerr_arch.o' Current working directory /code/illumos-gate/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis cc1: warnings being treated as errors etm.c:182: error: initialization makes integer from pointer without a cast etm.c:185: error: initialization makes integer from pointer without a cast etm.c:557: error: initialization makes integer from pointer without a cast etm.c:590: error: initialization makes integer from pointer without a cast etm.c:591: error: initialization makes integer from pointer without a cast etm.c: In function 'etm_iosvc_cleanup': etm.c:1636: error: comparison between pointer and integer etm.c:1639: error: assignment makes integer from pointer without a cast etm.c:1642: error: comparison between pointer and integer etm.c:1645: error: assignment makes integer from pointer without a cast etm.c: In function 'etm_iosvc_setup': etm.c:2873: error: comparison between pointer and integer etm.c:2877: error: comparison between pointer and integer etm.c: In function '_fmd_fini': etm.c:4200: error: comparison between pointer and integer etm.c:4203: error: assignment makes integer from pointer without a cast etm.c:4206: error: comparison between pointer and integer etm.c:4209: error: assignment makes integer from pointer without a cast etm.c:4212: error: comparison between pointer and integer etm.c:4215: error: assignment makes integer from pointer without a cast etm.c:4276: error: comparison between pointer and integer etm.c:4279: error: assignment makes integer from pointer without a cast etm.c:4282: error: comparison between pointer and integer etm.c:4285: error: assignment makes integer from pointer without a cast *** Error code 1 dmake: Fatal error: Command failed for target `etm.o' Current working directory /code/illumos-gate/usr/src/cmd/fm/modules/sun4v/etm cc1: warnings being treated as errors ../../sun4/cpumem-diagnosis/cmd_cpuerr.c: In function 'cmd_xxcu_resolve': ../../sun4/cpumem-diagnosis/cmd_cpuerr.c:402: error: assignment makes integer from pointer without a cast ../../sun4/cpumem-diagnosis/cmd_cpuerr.c: In function 'cmd_xxcu_initial': ../../sun4/cpumem-diagnosis/cmd_cpuerr.c:503: error: assignment makes integer from pointer without a cast *** Error code 1 dmake: Fatal error: Command failed for target `cmd_cpuerr.o' Current working directory /code/illumos-gate/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis ../../sun4/cpumem-diagnosis/cmd_cpu.c: In function 'cmd_trw_alloc': ../../sun4/cpumem-diagnosis/cmd_cpu.c:1316: error: comparison between pointer and integer *** Error code 1 dmake: Warning: Command failed for target `cmd_cpu.o' ../../sun4/cpumem-diagnosis/cmd_memerr.c: In function 'cmd_ue_common': ../../sun4/cpumem-diagnosis/cmd_memerr.c:871: error: incompatible types when returning type 'void *' but 'cmd_evdisp_t' was expected *** Error code 1 dmake: Warning: Command failed for target `cmd_memerr.o' Current working directory /code/illumos-gate/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis cc1: warnings being treated as errors cmd_memerr_arch.c: In function 'cmd_ioxefrx_fire': cmd_memerr_arch.c:348: error: assignment makes integer from pointer without a cast cmd_memerr_arch.c:349: error: assignment makes integer from pointer without a cast *** Error code 1 dmake: Warning: Command failed for target `cmd_memerr_arch.o' Current working directory /code/illumos-gate/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 67dca347c78f6433be936f7be1c9bbf7069a19ec
commit 67dca347c78f6433be936f7be1c9bbf7069a19ec Author: Toomas Soome <tsoome@me.com> Date: 2020-04-24T17:53:03.000Z 12534 fm: NULL pointer errors Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>
Actions